RESOLVED FIXED23448
memory leak in Mac version of preferredExtensionForImageSourceType
https://bugs.webkit.org/show_bug.cgi?id=23448
Summary memory leak in Mac version of preferredExtensionForImageSourceType
Darin Adler
Reported 2009-01-20 22:43:27 PST
The buildbot is showing this memory leak (along with others).
Attachments
patch (1.60 KB, patch)
2009-01-20 22:44 PST, Darin Adler
ap: review+
Darin Adler
Comment 1 2009-01-20 22:44:32 PST
Alexey Proskuryakov
Comment 2 2009-01-20 23:26:43 PST
Comment on attachment 26885 [details] patch r=me, but I don't think it builds as is (extension vs. extensions).
Darin Adler
Comment 3 2009-01-20 23:39:24 PST
Note You need to log in before you can comment on or make changes to this bug.