2009-01-20  Darin Adler  <darin@apple.com>

Reviewed by Alexey Proskuryakov.

        Bug 23448: memory leak in Mac version of preferredExtensionForImageSourceType
        https://bugs.webkit.org/show_bug.cgi?id=23448

        * platform/graphics/cg/ImageSourceCGMac.mm:
        (WebCore::preferredExtensionForImageSourceType): Use RetainPtr to avoid the leak.



Canonical link: https://commits.webkit.org/32280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40084 268f45cc-cd09-0410-ab3c-d52691b4dbfc